# fastApiProject

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/static/css/: main.css
app/templates/: index.html
